--- a/view/default/imnicore/install.html
+++ b/view/default/imnicore/install.html
@@ -57,6 +57,8 @@
 											<option>{$lang}</option>
 										{/foreach}
 									</select></li>
+								<li><label for="usersTable">{Lang::get('install.default.users.table')}: </label><input type="text" name="usersTable" value="ic_users" />
+									<input type="checkbox" name="tableExists" /> <label for="tableExists">{Lang::get('install.default.table.exists')}</label></li>
 							</ul>
 							<div id="button-container">
 								<input id="button" type="submit" value="{Lang::get('done')}" />
@@ -70,8 +72,9 @@
 					{/if}
 					<div class="container body">
 						<p>{Lang::get('install.done.text1')}<br>{Lang::get('install.done.text2')}</p>
+						<p>{Lang::get('install.done.text3')}</p>
 						<div id="button-container">
-							<a id="button" href="{Imnicore::getPath()}/imnicore/install/step3/delete">{Lang::get('install.done.remove')}</a>
+							<a id="button" href="{Imnicore::getPath()}">{Lang::get('install.done')}</a>
 						</div>
 					</div>
 				{else}
