--- a/view/default/imnicore/install.html
+++ b/view/default/imnicore/install.html
@@ -74,7 +74,7 @@
 						<p>{Lang::get('install.done.text1')}<br>{Lang::get('install.done.text2')}</p>
 						<p>{Lang::get('install.done.text3')}</p>
 						<div id="button-container">
-							<a id="button" href="{Imnicore::getPath()}">{Lang::get('install.done')}</a>
+							<a id="button" href="{Imnicore::getPath()}/imnicore/install/step3/check">{Lang::get('install.done')}</a>
 						</div>
 					</div>
 				{else}
