--- a/css/default/imnicore/install.css
+++ b/css/default/imnicore/install.css
@@ -68,7 +68,8 @@ h3.container.title {
 	width: 100%;
 	margin: 0;
 	height: 25px;
-	line-height: 25px; border-radius : 6px 6px 0 0;
+	line-height: 25px;
+	border-radius : 6px 6px 0 0;
 	text-align: center;
 	border-bottom: 1px solid rgba(0, 0, 0, 0.1);
 	font-family: "Ubuntu Condensed";
@@ -77,7 +78,7 @@ h3.container.title {
 }
 
 div.container.body {
-	padding: 0 0 10px 15px;
+	padding: 0 15px 10px 15px;
 }
 
 div#button-container {
